@@ -223,3 +223,4 @@
 - Made it so the IRCd can survive with certain set {} errors (uses defaults)
 - stats-server and services-server are no longer required (missing = disabled services aliases)
 - socks set {} options are now optional. Defaults are used if missing
+- If an invalid ban or except is found, it is removed
